--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.16",
     "ai": "^5.0.48",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +29,7 @@
     "lucide-react": "^0.544.0",
     "mdye": "^0.0.17",
     "nanoid": "^5.1.5",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
@@ -42,6 +43,6 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.16"
   }
 }
